syntax = "proto3";
package e2e;

option go_package = "github.com/effective-security/protoc-gen-go/e2e";
import "es/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service Status {
    // Version returns the server version.
    rpc Version(google.protobuf.Empty) returns (ServerVersion) {
        option (google.api.http) = {
            get: "/v1/status/version"
        };
        option (es.api.allowed_roles) = "admin";
    }

    // Server returns the server status.
    rpc Server(google.protobuf.Empty) returns (ServerStatusResponse) {
        option (google.api.http) = {
            get: "/v1/status/server"
        };
        option (es.api.allowed_roles) = "user";
    }

    // Caller returns the caller status.
    rpc Caller(google.protobuf.Empty) returns (CallerStatusResponse) {
        option (google.api.http) = {
            get: "/v1/status/caller"
        };
    }
}

// ServerVersion provides server build and runtime version
message ServerVersion {
    option (es.api.generate_meta) = true;

    // Build is the server build version.
    string Build = 1 [json_name = "Build"];
    // Runtime is the runtime version.
    string Runtime = 2 [json_name = "Runtime"];
}

// ServerStatus provides server status information
message ServerStatus {
    option (es.api.generate_meta) = true;

    // Name of the server or application.
    string Name = 1 [json_name = "Name"];
    // Nodename is the human-readable name of the cluster member,
    // or empty for single host.
    string Nodename = 2 [json_name = "Nodename"];
    // Hostname is operating system's host name.
    string Hostname = 3 [json_name = "Hostname"];
    // ListenURLs is the list of URLs the service is listening on.
    repeated string ListenUrls = 4 [json_name = "ListenUrls"];
    // StartedAt is the time when the server has started.
    google.protobuf.Timestamp StartedAt = 5
        [json_name = "StartedAt", (es.api.display) = "Started At"];

    // Status of the server.
    // Can be one of:
    // `Running`, `Failed`, `Stopped`.
    ServiceStatus.Enum Status = 6
        [json_name = "Status", (es.api.display) = "Status"];
}

// ServerStatusResponse returns status and version
message ServerStatusResponse {
    option (es.api.generate_meta) = true;

    // Status of the server.
    ServerStatus Status = 1 [json_name = "Status", (es.api.search) = "object"];

    // Version of the server.
    ServerVersion Version = 2
        [json_name = "Version", (es.api.search) = "object"];
}

// CallerStatusResponse returns the caller information
message CallerStatusResponse {
    option (es.api.generate_meta) = true;

    // Subject of the caller.
    string Subject = 1
        [json_name = "Subject", (es.api.search) = "keyword,with_text"];
    // Role of the caller. Can be one of `Admin`, `User`.
    string Role = 2 [json_name = "Role", (es.api.search) = "text,with_keyword"];
    // Claims from the token, json encoded map[string]interface{}
    bytes Claims = 3
        [json_name = "Claims", (es.api.search) = "no_index,exclude"];
}

// ServiceStatus provides status
message ServiceStatus {
    enum Enum {
        // Unknown status is used when the status is not known.
        Unknown = 0;
        // Running status is used when the service is running.
        //
        // Second line of the description.
        Running = 0x2;
        Failed  = 0x10 [
            (es.api.enum_args) = "error, code",
            (es.api.enum_description) =
                "Failed status has error code and message"
        ];
        // All is a bitmask of all statuses.
        All = 0x7fffffff;
    }
}

enum Role {
    Unknown = 0 [
        (es.api.enum_description) = "Unknown role",
        (es.api.enum_display)     = "Unknown"
    ];
    Admin = 0x2 [
        (es.api.enum_description) = "Administrator role",
        (es.api.enum_display)     = "Administrator"
    ];
    User = 0x10 [
        (es.api.enum_description) = "User role",
        (es.api.enum_display)     = "User"
    ];
}
